examples/bad_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-name
spec:
  containers:
    - name: nginx
      image: nginx:latest
