examples/policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: kw-policy-zig
spec:
  module: registry://ghcr.io/fabriziosestito/kw-policy-zig:v0.1.0
  settings:
    invalid_names:
      - bad-name
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      resources:
        - pods
      operations:
        - CREATE
        - UPDATE
  mutating: false
